--- a/main.css
+++ b/main.css
@@ -1,9 +1,13 @@
+.box {
+	width:200px;
+	height:200px;
+display: inline-block;
+}
 
-
-.red, .blue, .green, .peachpuff {
-	height: 100%;
-	width: 25%;
-	display: inline-block;
+.boxcontainer {
+	display: block;
+	width: 900px;
+	height: 200px;
 }
 
 .red{
@@ -13,16 +17,67 @@
 	background-color: blue;
 
 }
-.green {
-	background-color: green;
-}
 .peachpuff {
 	background-color: peachpuff;
 }
-.boxcontainer {
-width: 800px;
-height: 200px;
+
+.rainbow {
+-webkit-animation:rainbow 3s infinite;
+-ms-animation:rainbow 3s infinite;
+-o-animation:rainbow 3s infinite;
+animation:rainbow 3s infinite;
 }
-.Acontainer {
-	display: inline-block;
+@-webkit-keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+@-ms-keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+@-o-keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+@keyframes rainbow {
+0% {background-color: #ff0000;}
+10% {background-color: #ff8000;}
+20% {background-color: #ffff00;}
+30% {background-color: #80ff00;}
+40% {background-color: #00ff00;}
+50% {background-color: #00ff80;}
+60% {background-color: #00ffff;}
+70% {background-color: #0080ff;}
+80% {background-color: #0000ff;}
+90% {background-color: #8000ff;}
+100% {background-color: #ff0080;}
+}
+}
 }
