--- a/main.css
+++ b/main.css
@@ -16,10 +16,15 @@ body {
 	height: 200px;
 }
 
-.Acontainer{
-	text-align:right;
+.Qcontainer{
+	text-align:center;
 }
 
+.answer, .question {
+	color: white;
+	font-size: 20px;
+	margin-top: 20px;
+}
 
 
 h1{
